tests/sksl/errors/FloatRemainder.glsl
### Compilation failed:

error: 6: type mismatch: '%' cannot operate on 'float', 'float'
void rem()    { x = x % y; }
                    ^^^^^
error: 7: type mismatch: '%=' cannot operate on 'float', 'float'
void rem_eq() { x %= y; }
                ^^^^^^
2 errors
